[package]
name = "tangl"
version = "0.1.0"
edition = "2024"
#build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"]}
termtree = "1"
colored = "3"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0"
uuid = { version = "1", features = ["v4"] }
itertools = "0"

[dev-dependencies]
tempfile = "3"
